--- a/index.html
+++ b/index.html
@@ -1,32 +1,75 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="UTF-8">
   <title>AWS S3 Image Uploader</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #f2f2f2;
+      text-align: center;
+      padding: 50px;
+    }
+    input[type="file"] {
+      margin: 20px;
+    }
+    button {
+      padding: 10px 20px;
+      font-size: 16px;
+    }
+    pre {
+      background: #fff;
+      padding: 20px;
+      text-align: left;
+      display: inline-block;
+      margin-top: 30px;
+      border: 1px solid #ccc;
+    }
+  </style>
 </head>
 <body>
-  <h2>Upload Image to S3</h2>
-  <input type="file" id="fileInput" />
-  <button onclick="upload()">Upload</button>
+
+  <h1>Upload Image to S3</h1>
+
+  <input type="file" id="imageInput" accept="image/*">
+  <br>
+  <button onclick="uploadImage()">Upload</button>
+
+  <pre id="status"></pre>
 
   <script>
-    async function upload() {
-      const file = document.getElementById("fileInput").files[0];
+    async function uploadImage() {
+      const fileInput = document.getElementById('imageInput');
+      const file = fileInput.files[0];
+
+      if (!file) {
+        alert('Please select an image file');
+        return;
+      }
+
       const reader = new FileReader();
+      reader.onload = async function () {
+        const base64Image = reader.result.split(',')[1];
 
-      reader.onload = async () => {
-        const base64data = reader.result.split(",")[1];
+        try {
+          const response = await fetch('https://s12hw3uhvf.execute-api.ap-south-1.amazonaws.com/prod', {
+            method: 'POST',
+            headers: {
+              'Content-Type': 'application/json'
+            },
+            body: JSON.stringify({ image: base64Image })
+          });
 
-        const response = await fetch("YOUR_API_GATEWAY_ENDPOINT", {
-          method: "POST",
-          body: base64data
-        });
-
-        const result = await response.text();
-        alert(result);
+          const result = await response.json();
+          document.getElementById('status').innerText = JSON.stringify(result, null, 2);
+        } catch (error) {
+          document.getElementById('status').innerText = 'Upload failed: ' + error;
+        }
       };
 
       reader.readAsDataURL(file);
     }
   </script>
+
 </body>
 </html>
